--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start":"node app"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,7 @@
   },
   "homepage": "https://github.com/aaron-might/team_profile_generator#readme",
   "dependencies": {
-    "inquirer": "^8.1.0",
-    "jest": "^27.0.4"
+    "inquirer": "^7.3.3",
+    "jest": "^24.0.9"
   }
 }
